<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_dialog_backround"
        android:fontFamily="@font/cairo_regular"
        android:gravity="center"
        android:text="@string/sortBy"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:onClick="select"
            android:checked="true"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/cairo_regular"
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_ordered" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray" />

        <RadioButton
            android:onClick="select"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/cairo_regular"
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_recent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray" />

        <RadioButton
            android:onClick="select"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/cairo_regular"
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oldest" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray" />

        <RadioButton
            android:onClick="select"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/cairo_regular"
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_rated" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>